<resources>
    <string name="app_name">ReforestAR</string>
    <string name="title_catalog">Catalog</string>
    <string name="title_camera">Reforest</string>
    <string name="title_profile">Profile</string>
    <string name="title_maps">Map</string>
    <string name="title_projects">Projects</string>
    <string name="search">Search</string>
    <string name="example">Example</string>
    <string name="availability">Availability</string>
    <string name="status">Status</string>
    <string name="description">Description:</string>
    <string name="project_owner">Project owner:</string>
    <string name="username">Username:</string>
    <string name="email">Email:</string>
    <string name="owner_email">Owner email:</string>
    <string name="owner_username">Owner username:</string>
    <string name="password">Password:</string>
    <string name="name">Name:</string>
    <string name="access_type">Access type:</string>
    <string name="size">Size</string>
    <string name="confirm_password">Confirm password:</string>
    <string name="min_dist_abbr">Min. distance</string>
    <string name="min_dist">Mininum distance</string>
    <string name="min_height_abbr">Min. height</string>
    <string name="min_height">Mininum height</string>
    <string name="max_height_abbr">Max. height</string>
    <string name="max_height">Maximum height</string>
    <string name="tree_height">Next tree height:</string>
    <string name="load_error">Tree image is downloading.</string>
    <string name="planted_trees">Planted trees</string>
    <string name="reforested_area">Reforested area</string>
    <string name="user_type">User type</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="create_account">Create account</string>
    <string name="create">Create</string>
    <string name="project_login_msg">To view projects, please login.</string>
    <string name="pinus_pinaster">Pinus pinaster</string>
    <string name="tree_2">Salix alba</string>
    <string name="searching_plane_message">Searching for surface</string>
    <string name="waiting_for_tap_message">Tap on the surface to place a tree</string>
    <string name="model_error">Model can\'t be loaded.</string>
    <string name="button_text_enable_depth">Enable</string>
    <string name="button_text_disable_depth">Disable</string>
    <string name="options_title_with_depth">Your device supports depth</string>
    <string name="options_title_without_depth">Your device does not support depth</string>
    <string name="depth_use_explanation">When Depth is enabled on supported devices, virtual objects adapt to the environment by blending in with the real world.</string>
    <string name="min_distance_warning">Distance between trees is too small. Place tree at a farther distance.</string>
    <string name="empty_fields">Fill all the fields to continue.</string>
    <string name="empty_fields_warning">Fields are empty</string>
    <string name="email_exists">An account with this email already exists.</string>
    <string name="username_exists">An account with this username already exists.</string>
    <string name="project_exists">A project with this name already exists.</string>
    <string name="email_exists_warning">Email exists</string>
    <string name="username_exists_warning">Username exists</string>
    <string name="project_exists_warning">Project name is taken</string>
    <string name="invalid_email">Email format is incorrect.</string>
    <string name="password_error">The inserted passwords do not match.</string>
    <string name="username_error">Username must be at least 6 characters long and can only include letters, numbers, ".", "_" and "-".</string>
    <string name="username_error2">Username must not be longer than 20 characters.</string>
    <string name="name_error">Name must be at least 3 characters long and can only include letters and "-".</string>
    <string name="name_error2">Name must not be longer than 50 characters.</string>
    <string name="user_created">User created successfully. You will now be redirected to your profile page.</string>
    <string name="project_created">Project created successfully.</string>
    <string name="success">Success</string>
    <string name="not_found_warning">User not found</string>
    <string name="not_found_username">No user with this username was found</string>
    <string name="user_blocked">This user is blocked.</string>
    <string name="user_blocked_warning">Blocked</string>
    <string name="incorrect_password">The password is incorrect.</string>
    <string name="edit_profile">Edit name</string>
    <string name="upload_image">Upload profile image</string>
    <string name="remove_image">Remove profile image</string>
    <string name="insert_name">Insert new name:</string>
    <string name="login_error">There was an error logging in. Please try again.</string>
    <string name="about">About</string>
    <string name="empty_projects">It seems like you don\'t have any projects yet.</string>
    <string name="login_projects">Log in to view your projects and projects shared with you.</string>
    <string name="share">Share</string>
    <string name="share_access">Share this project with another user:</string>
    <string name="share_read_only">Share as read-only</string>
    <string name="insert_username">Insert a username</string>
    <string name="users_access">Users with access to this project:</string>
    <string name="remove">Remove</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="confirm_user">Confirm this is the user you wish to share the project with:</string>
    <string name="share_error">You cannot share a project with yourself.</string>
    <string name="save">Save project</string>
    <string name="insert_project_name">Insert project name:</string>
    <string name="insert_project_description">Insert project description:</string>
    <string name="project">Project </string>
    <string name="saved"> saved.</string>
    <string name="no_trees">No trees have been planted.</string>
    <string name="login_warning">Please log in.</string>
    <string name="login_message">To be able save your project you must be logged in. No changes will be saved.</string>
    <string name="access_warning">Please allow access.</string>.
    <string name="camera_message">To be able to reforest you must allow access to the camera.</string>
    <string name="location_message">To be able save your project you must allow access to your location.</string>
    <string name="pfp_message">To be able to change your picture you must allow access to your gallery.</string>
    <string name="ar_configurations">Options</string>
    <string name="tree_type">Tree type:</string>
    <string name="trees_quantity">Number of trees:</string>
    <string name="delete_trees">Delete all trees</string>
    <string name="undo">Undo last placement</string>
    <string name="available_areas">Available areas</string>
    <string name="load_project">Load project</string>
    <string name="loaded"> loaded.</string>
    <string name="reforest"> Reforest</string>
    <string name="not_found">Not found</string>
    <string name="welcome_to_reforestar">Welcome to ReforestAR!</string>
    <string name="scroll_down_to_read_all_information_and_instructions_of_the_application">Scroll down to read all information and instructions of the application.</string>
    <string name="here_you_will_be_able_to_perform_reforestation_simulation_through_the_use_of_your_camera_s_device">Here you will be able to perform reforestation simulation through the use of your camera\'s device.</string>
    <string name="once_the_camera_opens_please_move_your_device_as_the_on_screen_animation_does_this_will_help_the_camera_detect_surfaces_to_plant_your_trees">Once the camera opens, please move your device as the on-screen animation does. This will help the camera detect surfaces to plant your trees.</string>
    <string name="once_a_surface_is_detected_it_will_be_represent_by_a_zone_of_white_dots_on_the_screen_you_can_plant_your_trees_there_keep_in_mind_that_trees_must_be_planted_with_a_distance_of_1_5m_apart_each">Once a surface is detected, it will be represent by a zone of white dots on the screen, you can plant your trees there. Keep in mind that trees must be planted with a distance of 1.5m apart each.</string>
    <string name="inside_the_ar_camera_a_configuration_menu_is_available_to_customize_your_planting_session_clicking_the_icon_above_toggles_this_menu">Inside the AR camera, an options menu is available to customize your planting session, clicking the icon above toggles this menu.</string>
    <string name="when_inside_the_ar_camera_you_may_close_it_by_clicking_on_the_above_icon">When inside the AR camera, you may close it by clicking on the above icon.</string>
    <string name="you_may_also_remove_a_tree_by_holding_it_for_1_5s">You may also remove a tree by holding it for 1.5s.</string>
    <string name="to_save_your_projects_you_must_have_an_account_that_can_be_created_in_the_profile_section_or_be_logged_in">To save your projects you must have an account that can be created in the profile section or be logged in.</string>
    <string name="to_get_started_just_click_on_the_button_below">To get started with the AR experience, just click on the button below!</string>
    <string name="tree_3">Pine tree</string>
</resources>
