<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_maps"
        android:icon="@drawable/baseline_map_24"
        android:title="@string/title_maps" />

    <item
        android:id="@+id/navigation_projects"
        android:icon="@drawable/round_cases_24"
        android:title="@string/title_projects" />

    <item
        android:id="@+id/navigation_camera"
        android:icon="@drawable/baseline_park_24"
        android:title="@string/title_camera" />

    <item
        android:id="@+id/navigation_catalog"
        android:icon="@drawable/baseline_menu_book_24"
        android:title="@string/title_catalog" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/baseline_face_24"
        android:title="@string/title_profile" />

</menu>