<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_camera">

    <fragment
        android:id="@+id/navigation_maps"
        android:name="com.example.reflorestar.ui.map.MapsFragment"
        android:label="@string/title_maps"
        tools:layout="@layout/fragment_maps" />

    <fragment
        android:id="@+id/navigation_projects"
        android:name="com.example.reflorestar.ui.projects.ProjectsFragment"
        android:label="@string/title_projects"
        tools:layout="@layout/fragment_projects" />

    <fragment
        android:id="@+id/navigation_catalog"
        android:name="com.example.reflorestar.ui.catalog.CatalogFragment"
        android:label="@string/title_catalog"
        tools:layout="@layout/fragment_catalog" />

    <fragment
        android:id="@+id/navigation_camera"
        android:name="com.example.reflorestar.ui.camera.CameraFragment"
        android:label="@string/title_camera"
        tools:layout="@layout/fragment_camera" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.reflorestar.ui.profile.AccountHomeFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>