<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E8E4DA"
    tools:context=".ui.home.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.123"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/female_gardener"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintTop_toTopOf="@+id/guideline6"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/speechbubble"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintHeight_percent="0.66"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintWidth_percent="0.65">

        <ScrollView
            android:id="@+id/scrollViewHome"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fadeScrollbars="false"
            android:paddingStart="30dp"
            android:paddingTop="10dp"
            android:paddingEnd="4dp"
            android:paddingBottom="10dp"
            android:scrollbarThumbVertical="@drawable/scrollbar_gradient"
            tools:layout_editor_absoluteX="174dp"
            tools:layout_editor_absoluteY="369dp">

            <LinearLayout
                android:id="@+id/contentInfoHome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView23"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_8sdp"
                    android:paddingEnd="@dimen/_8sdp"
                    android:text="@string/welcome_to_reforestar"
                    android:textAlignment="center"
                    android:textSize="@dimen/_14sdp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textViewScrollMessage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_8sdp"
                    android:paddingEnd="@dimen/_8sdp"
                    android:text="@string/scroll_down_to_read_all_information_and_instructions_of_the_application"
                    android:textAlignment="center"
                    android:textSize="@dimen/_14sdp"/>

                <TextView
                    android:id="@+id/textView24"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_8sdp"
                    android:paddingEnd="@dimen/_8sdp"
                    android:text="@string/here_you_will_be_able_to_perform_reforestation_simulation_through_the_use_of_your_camera_s_device"
                    android:textAlignment="center"
                    android:textSize="@dimen/_14sdp"
                    style="@android:style/TextAppearance.Small"/>

                <TextView
                    android:id="@+id/textView25"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_8sdp"
                    android:paddingEnd="@dimen/_8sdp"
                    android:text="@string/once_the_camera_opens_please_move_your_device_as_the_on_screen_animation_does_this_will_help_the_camera_detect_surfaces_to_plant_your_trees"
                    android:textAlignment="center"
                    android:textSize="@dimen/_14sdp" />

                <TextView
                    android:id="@+id/textView26"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_8sdp"
                    android:paddingEnd="@dimen/_8sdp"
                    android:text="@string/once_a_surface_is_detected_it_will_be_represent_by_a_zone_of_white_dots_on_the_screen_you_can_plant_your_trees_there_keep_in_mind_that_trees_must_be_planted_with_a_distance_of_1_5m_apart_each"
                    android:textAlignment="center"
                    android:textSize="@dimen/_14sdp" />


                <TextView
                    android:id="@+id/textView29"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_8sdp"
                    android:paddingEnd="@dimen/_8sdp"
                    android:text="@string/you_may_also_remove_a_tree_by_holding_it_for_1_5s"
                    android:textAlignment="center"
                    android:textSize="@dimen/_14sdp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="@dimen/_8sdp"
                    android:orientation="vertical">


                    <ImageView
                        android:id="@+id/imageView10"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginEnd="4dp"
                        android:layout_weight="1"
                        android:src="@drawable/baseline_settings_36"
                        app:tint="@color/colorPrimary" />

                    <TextView
                        android:id="@+id/textView27"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/inside_the_ar_camera_a_configuration_menu_is_available_to_customize_your_planting_session_clicking_the_icon_above_toggles_this_menu"
                        android:textAlignment="center"
                        android:textSize="@dimen/_14sdp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="@dimen/_8sdp"
                    android:orientation="vertical">


                    <ImageView
                        android:id="@+id/imageView11"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginEnd="4dp"
                        android:layout_weight="1"
                        android:src="@drawable/baseline_close_36"
                        app:tint="@color/colorPrimary" />

                    <TextView
                        android:id="@+id/textView28"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/when_inside_the_ar_camera_you_may_close_it_by_clicking_on_the_above_icon"
                        android:textAlignment="center"
                        android:textSize="@dimen/_14sdp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="@dimen/_8sdp"
                    android:orientation="vertical">


                    <ImageView
                        android:id="@+id/imageView12"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginEnd="4dp"
                        android:layout_weight="1"
                        android:src="@drawable/baseline_face_36"
                        app:tint="@color/colorPrimary" />

                    <TextView
                        android:id="@+id/textView30"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_8sdp"
                        android:paddingEnd="@dimen/_8sdp"
                        android:text="@string/to_save_your_projects_you_must_have_an_account_that_can_be_created_in_the_profile_section_or_be_logged_in"
                        android:textAlignment="center"
                        android:textSize="@dimen/_14sdp" />
                </LinearLayout>

                <TextView
                    android:id="@+id/textView31"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_8sdp"
                    android:paddingEnd="@dimen/_8sdp"
                    android:text="@string/to_get_started_just_click_on_the_button_below"
                    android:textAlignment="center"
                    android:textSize="@dimen/_14sdp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/cameraButton"
                    style="@style/Widget.MaterialComponents.Button.Icon"
                    android:layout_width="72dp"
                    android:layout_height="70dp"
                    android:insetLeft="0dp"
                    android:insetTop="0dp"
                    android:insetRight="0dp"
                    android:insetBottom="0dp"
                    android:theme="@style/RoundMaterialButtonTheme"
                    app:icon="@drawable/baseline_camera_alt_24"
                    app:iconPadding="0dp"
                    app:iconSize="48dp"
                    app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MyApp.Button.Rounded" />

                <!--                <Button
                    android:id="@+id/cameraButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/buttonstyle"
                    android:text="ReflorestAR"
                    android:textColor="#FFFFFF" />-->

            </LinearLayout>
        </ScrollView>

    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.28" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.72" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.84" />

    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/ic_politecnico_v_01"
        app:layout_constraintHeight_percent="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.3" />

</androidx.constraintlayout.widget.ConstraintLayout>